Core Java II: ship units 19-44, extend verify_course2.sh to the whole course
Course 2 grew from 36 to 44 units across 9 sections. The renumber (old 19-24 ->
25-30, 25-27 -> 31-33, 28-31 -> 34-38 with a new 37 split out, 32-35 -> 39-42,
36 -> 44) left ~28 unit folders untracked and the verify script covering only
units 01-18 plus the capstone. This lands all of them.

verify_course2.sh now runs every command the READMEs give a viewer for units
19-44 and the capstone, in the script's existing idiom:
  - per-unit PASS/FAIL, per-command wall-clock timeout, non-zero exit on any
    unexpected result
  - expect_fail asserts the real error text, not just a non-zero exit, for every
    break-it-on-purpose file (MatchException, ClassNotFoundException, the module
    errors, ServiceLoader's non-public provider ctor, TypeReference is abstract,
    Non-parseable POM, and the rest)
  - servers in units 27, 28, 30, 42 and 43 each own one port at a time: the port
    is checked free before, the JVM is killed by PID after, and the port is
    asserted free again
  - unit 43 records JFR, drives real load and asks the live JVM three jcmd
    questions while it is still busy, then runs watch.sh end to end
  - JAVA_HOME is exported for every mvn and java: a default shell here gives
    Maven JDK 26 and --enable-preview then fails with "invalid source release 25"
  - SKIP_SLOW=1 skips the 50 s pool run, the deadlock demo, the 50 MB four-way
    read, jpackage and unit 43's StackChunks + watch.sh; the dmg build is always
    skipped
  - cleanup removes every target/, out/, .class, .db, .jfr, thread dump, jlink
    image and jpackage bundle the examples create

Also:
  - c2-unit29/breaks/NoBraces.java: the "drop the braces" compile failure the
    deck shows was never shipped. It lives outside src/main/java so it cannot
    break mvn compile, and reproduces the slide's error byte for byte.
  - .gitignore covers every generated path. Deliberately NOT *.app/ — with
    core.ignorecase=true 